[gd_scene load_steps=17 format=3 uid="uid://bya2v3tqhkihn"]

[ext_resource type="Script" uid="uid://d31mucsnqfk84" path="res://main/main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bglokeey7o5vi" path="res://main/underwater-background.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dghnoksxjh8y8" path="res://main/ring_spawner.gd" id="3_xwkvk"]
[ext_resource type="Script" uid="uid://b4xgw5pahk8vu" path="res://main/mine_spawner.gd" id="4_c651c"]
[ext_resource type="AudioStream" uid="uid://cef7frtvo4j67" path="res://audio/music/gameplay.ogg" id="5_3wy1v"]
[ext_resource type="AudioStream" uid="uid://45xvaibwxe4" path="res://audio/effects/explosion.ogg" id="6_kfbq2"]
[ext_resource type="AudioStream" uid="uid://cdsntuguie7kp" path="res://audio/effects/coin.ogg" id="7_4dugh"]
[ext_resource type="AudioStream" uid="uid://0kdsk21yqtaw" path="res://audio/effects/game-start.ogg" id="8_67ri8"]
[ext_resource type="AudioStream" uid="uid://cpd133u5qypyp" path="res://audio/effects/game-over.ogg" id="9_grrlh"]
[ext_resource type="AudioStream" uid="uid://bpaq3b40b6oxg" path="res://audio/effects/splash.ogg" id="10_0i4oc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(8, 2000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(8, 2000)

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_0i4oc"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_bsumw"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_fwcvl"]
font_size = 45

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(361, 638.5)
scale = Vector2(0.7, 0.85)
texture = ExtResource("1_ig7tw")

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(0, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_0xm2m")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(720, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_h2yge")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_left = 69.0
offset_top = 59.0
offset_right = 316.0
offset_bottom = 173.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_0xm2m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="UI"]
offset_left = 210.0
offset_top = 630.0
offset_right = 510.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="GameOver" type="Label" parent="UI"]
offset_left = 79.0
offset_top = 348.0
offset_right = 645.0
offset_bottom = 460.0
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_0i4oc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinesHit" type="Label" parent="UI"]
offset_left = 232.0
offset_top = 458.0
offset_right = 487.0
offset_bottom = 521.0
text = "Mines Hit: 0"
label_settings = SubResource("LabelSettings_bsumw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="UI"]
offset_left = 219.0
offset_top = 518.0
offset_right = 504.0
offset_bottom = 581.0
text = "Final Score: 0"
label_settings = SubResource("LabelSettings_fwcvl")

[node name="CreditsButton" type="Button" parent="UI"]
offset_left = 599.0
offset_top = 28.0
offset_right = 694.0
offset_bottom = 59.0
text = "Credits"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(360, 640)

[node name="RingSpawner" type="Node2D" parent="."]
script = ExtResource("3_xwkvk")

[node name="MineSpawner" type="Node2D" parent="."]
script = ExtResource("4_c651c")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3wy1v")
autoplay = true
parameters/looping = true

[node name="ExplosionFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kfbq2")
volume_db = 10.0

[node name="CoinFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4dugh")
volume_db = 10.0

[node name="GameStartFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_67ri8")
volume_db = 20.0

[node name="GameOverFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_grrlh")
volume_db = 10.0

[node name="WaterSplashFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_0i4oc")
volume_db = 10.0
